@@ -1,4 +1,7 @@
 /*
+ * Yang 1.0 parser according to RFC6020.
+ * It is hopefully useful but not complete
+ * RFC7950 defines Yang version 1.1
  *
   ***** BEGIN LICENSE BLOCK *****
  
